2024-09-21  Alexios Galanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.5-3.
	* Removed Fortran code for fractional differencing simulation and replaced
	with import from fracdiff package (fdsim), following mail from B.R. about
	legacy code problems in the existing Fortran code.
	
2024-08-19  Alexios Galanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.5-2.
	* Replaced PI with M_PI in c code to accomodate STRICT_HEADERS check.


2023-09-18  Alexios Galanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.5-1.
	* Fix to quantile function for the skewed distributions
	of Fernandez and Steel (qsstd, qsged, qsnorm).
	* Change to CITATION to now use bibentry.
	
2022-10-24  Alexios Galanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.4-9.
	* Fix to gig.c warning about prototype declaration.
	
2022-04-18  Alexios Galanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.4-8.
	* Macros fixed in C code based on changes to headers and warning from CRAN.
	
2022-02-04  Alexios Galanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.4-7.
	* Export of additional functions for use in rmgarch
	
2022-01-18  Alexios Galanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.4-6.
	* Removed nloptr dependency
	
2021-05-14  Alexios Galanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.4-5.
	* Patch provided by Christian Haug to properly handle the state of the random number generator
	(GetRNGstate/PutRNGstate calls inside of the C functions).
	
2020-07-14  Alexios Galanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.4-4.
	* Removed expm dependency and implmented locally in R the matrix power function (%^%).
	
2020-04-18  Alexios Galanos <alexios@4dscape.com>
	* DESCRIPTION (Version): New version is 1.4-3.
	* Corrected documentation on FIGARCH model expansion in vignette.

2018-11-18  Alexios Galanos <alexios@4dscape.com>