@@ -17,3 +17,4 @@ rugarch.Rproj
 *.o
 inst/doc
 .DS_Store
+.DS_Store
