@@ -3,7 +3,7 @@ import(methods)
 importFrom("graphics", "plot", "lines","abline", "axis", "barplot", "box", "contour", "frame", "grid", "hist", "image", "layout", "legend", "mtext", "par", "persp", "points", "rect", "title")
 importFrom("grDevices", "colors", "dev.cur", "dev.interactive", "dev.new", "dev.next", "hsv", "rainbow", "topo.colors")
 importFrom("utils", "head", "menu", "str", "tail","data")
-importFrom("stats", "Box.test", "acf", "alias", "arima", "arima0", "ccf", "cov", "density", "deviance", "df.residual", "dnorm", "embed", "formula", "hat", "integrate", "lm", "ls.print", "lsfit", "median", "model.matrix", "na.omit", "na.pass", "nlminb", "optim", "pchisq", "pf", "pgamma", "pnorm", "ppoints", "qchisq", "qnorm", "resid", "rnorm", "runif", "sd", "spline", "uniroot", "var", "weights", "window")
+importFrom("stats", "Box.test", "acf", "alias", "arima", "arima0", "ccf", "cov", "density", "deviance", "df.residual", "dnorm", "embed", "formula", "hat", "integrate", "lm", "ls.print", "lsfit", "median", "model.matrix", "na.omit", "na.pass", "nlminb", "optim", "pchisq", "pf", "pgamma", "pnorm", "ppoints", "qchisq", "qnorm", "resid", "rnorm", "runif", "sd", "spline", "uniroot", "var", "weights", "window", "sigma")
 importFrom(Rsolnp, solnp, gosolnp, startpars)
 importFrom(nloptr, nloptr)
 importFrom(numDeriv, jacobian, hessian, grad)
