@@ -1,3 +1,8 @@
+2025-06-01  Alexios Galanos <alexios@4dscape.com>
+	* DESCRIPTION (Version): New version is 1.5-4.
+	* Removed generic S4 sigma method since stats now implements this since 3.3.0
+	(created conflict with stats::sigma. Thanks to Peter Daalgard for pointing this out).
+	
 2024-09-21  Alexios Galanos <alexios@4dscape.com>
 	* DESCRIPTION (Version): New version is 1.5-3.
 	* Removed Fortran code for fractional differencing simulation and replaced
